not working now

--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,14 @@ repositories {
 
 dependencies {
     testImplementation 'org.apache.groovy:groovy:4.0.14'
-	testImplementation 'de.qytera:qtaf-core:0.2.6'
-    testImplementation 'de.qytera:qtaf-html-report-plugin:0.2.6'
+	testImplementation 'de.qytera:qtaf-core:0.2.8'
+    testImplementation 'de.qytera:qtaf-html-report-plugin:0.2.8'
 }
 
 test {
-    useTestNG()
+    useTestNG(){ //Tells Gradle to use TestNG
+        useDefaultListeners = true // Tells TestNG to execute its default reporting structure
+    }
 }
 
 clean.doFirst {
