--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testImplementation 'org.apache.groovy:groovy:4.0.14'
 	testImplementation 'de.qytera:qtaf-core:0.2.8'
     testImplementation 'de.qytera:qtaf-html-report-plugin:0.2.8'
+    testImplementation 'de.qytera:qtaf-xray-plugin:0.2.8'
 }
 
 test {
